- Fixed bug #52468 (wddx_deserialize corrupts integer field value when left empty)